[package]
name = "source_query_cacher"
version = "0.1.6"
authors = ["Alik Aslanyan <cplusplus256@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[profile.release]
lto = true

[dependencies]
tokio = "0.1.11"
tokio-codec = "0.1.1"
bytes = "0.4.10"
futures = "0.1.25"
futures-retry = "0.3.0"
enum_primitive = "0.1.1"
num = "0.2.0"
log = "0.4.6"
pretty_env_logger="0.3.0"
byteorder = "1.2.7"
fnv = "1.0.6"
rand = "0.6"
lru_time_cache = "0.8.0"
structopt = "0.2.13"
itertools = "0.8.0"
net2 = "0.2.33"
mio = "0.6.16"